--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -297,18 +297,21 @@ body {
           align-items: center;
 }
 
-.menu-opened .github {
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.menu-opened .github a {
+.menu-opened a {
   visibility: visible;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
+  text-decoration: none;
 }
 
-.menu-opened .github .fab.fa-github {
+.menu-opened a .linkedin,
+.menu-opened a .github {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.menu-opened a .fab.fa-linkedin,
+.menu-opened a .fab.fa-github {
   color: #fff;
   width: 6.25rem;
   height: 6.25rem;
@@ -317,55 +320,20 @@ body {
   transition: all 0.3s;
 }
 
-.menu-opened .github:hover {
+.menu-opened a:hover .github {
   background: #2bff0085;
 }
 
-.menu-opened .github:hover a {
-  display: none;
-}
-
-.menu-opened .github:hover .fab.fa-github {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.menu-opened .linkedin {
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.menu-opened .linkedin a {
-  visibility: visible;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.menu-opened .linkedin .fab.fa-linkedin {
-  color: #fff;
-  width: 6.25rem;
-  height: 6.25rem;
-  display: none;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.menu-opened .linkedin:hover {
+.menu-opened a:hover .linkedin {
   background: #0011ff85;
 }
 
-.menu-opened .linkedin:hover a {
+.menu-opened a:hover p {
   display: none;
 }
 
-.menu-opened .linkedin:hover .fab.fa-linkedin {
+.menu-opened a:hover .fab.fa-linkedin,
+.menu-opened a:hover .fab.fa-github {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -410,7 +378,8 @@ body {
 
 .conversation-elements {
   width: 31.25rem;
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
   display: block;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -588,7 +557,8 @@ body {
 }
 
 .conversation-elements .conversation .my-message,
-.conversation-elements .conversation .robot-message {
+.conversation-elements .conversation .robot-message,
+.conversation-elements .conversation .weather-message {
   width: converToRem(100rem);
   min-width: 3.125rem;
   height: auto;
@@ -603,7 +573,8 @@ body {
 }
 
 .conversation-elements .conversation .my-message .time,
-.conversation-elements .conversation .robot-message .time {
+.conversation-elements .conversation .robot-message .time,
+.conversation-elements .conversation .weather-message .time {
   display: block;
   font-size: 0.8125rem;
   font-weight: bolder;
@@ -628,5 +599,94 @@ body {
 .conversation-elements .conversation .robot-message {
   background: #303030d7;
   margin-right: 1.25rem;
+}
+
+.conversation-elements .conversation .weather-message {
+  background: #0a5369d7;
+  margin-right: 1.25rem;
+}
+
+.conversation-elements .conversation .weather-message .image-weather {
+  min-width: 2.5rem;
+  min-height: 2.5rem;
+  max-width: 5rem;
+  max-height: 5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: auto;
+}
+
+.conversation-elements .conversation .weather-message .weather-status {
+  font-size: 1.25rem;
+  color: #bdc3c7;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 1.25rem;
+}
+
+.conversation-elements .conversation .weather-message .humidity {
+  font-size: converToRem(14rem);
+  color: #7ed6df;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: 700;
+}
+
+.conversation-elements .conversation .weather-message .temperature {
+  font-size: 0.875rem;
+  color: #f6e58d;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: 700;
+  padding: 1.25rem;
+}
+
+.conversation-elements .conversation .weather-message .feelsLike,
+.conversation-elements .conversation .weather-message .windSpeed,
+.conversation-elements .conversation .weather-message .cloudsLevel {
+  font-size: 1.125rem;
+  color: #fafafa;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: converToRem(2.5rem);
+}
+
+.conversation-elements .conversation .weather-message .cloudsLevel {
+  margin-bottom: 0.3125rem;
 }
 /*# sourceMappingURL=styles.css.map */
