--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -10,6 +10,23 @@ body {
   background: #4b4b4b;
 }
 
+::-webkit-scrollbar {
+  width: 1.25rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #ffffff11;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  border-radius: 50px;
+  border: 0.5px solid #ffffff8a;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #ffffff8a;
+  border: none;
+}
+
 .hidden {
   display: none;
 }
@@ -378,7 +395,7 @@ body {
 
 .conversation-elements {
   width: 31.25rem;
-  min-height: 100vh;
+  min-height: 100%;
   height: 100%;
   display: block;
   -webkit-box-pack: center;
@@ -448,22 +465,32 @@ body {
   margin-left: 1.25rem;
 }
 
-.conversation-elements .tooltip-button {
+.conversation-elements .microphone-bar {
+  height: 3.125rem;
+  width: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  margin-top: 0.625rem;
+}
+
+.conversation-elements .microphone-bar .tooltip-button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.conversation-elements .tooltip-button .talk {
+.conversation-elements .microphone-bar .tooltip-button .talk {
   max-width: 6.25rem;
   min-width: 5rem;
   height: 3.125rem;
   border: none;
   border-radius: 1.25rem;
   background: #c56cf0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: block;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -478,11 +505,13 @@ body {
   transition: all 0.5s;
   cursor: pointer;
   margin: auto;
-  margin-right: 10.625rem;
-  margin-left: 9.375rem;
+  position: fixed;
+  right: 0;
+  left: 0;
+  bottom: 0;
 }
 
-.conversation-elements .tooltip-button .talk .fas.fa-microphone-alt {
+.conversation-elements .microphone-bar .tooltip-button .talk .fas.fa-microphone-alt {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -494,16 +523,16 @@ body {
           align-items: center;
 }
 
-.conversation-elements .tooltip-button .talk:hover {
+.conversation-elements .microphone-bar .tooltip-button .talk:hover {
   -webkit-box-shadow: 0px 0px 10px 0px #252525b7;
           box-shadow: 0px 0px 10px 0px #252525b7;
 }
 
-.conversation-elements .tooltip-button .talk:active {
+.conversation-elements .microphone-bar .tooltip-button .talk:active {
   background: #540b79;
 }
 
-.conversation-elements .tooltip-button .talk.talking {
+.conversation-elements .microphone-bar .tooltip-button .talk.talking {
   -webkit-animation: "pulse" 0.7s infinite;
           animation: "pulse" 0.7s infinite;
 }
@@ -526,7 +555,7 @@ body {
   }
 }
 
-.conversation-elements .tooltip-button .tooltip-text {
+.conversation-elements .microphone-bar .tooltip-button .tooltip-text {
   opacity: 0;
   width: 7.5rem;
   height: 3.125rem;
@@ -546,13 +575,12 @@ body {
           justify-content: center;
   z-index: 2;
   font-family: "Baloo", sans-serif;
-  left: -100%;
-  margin-left: -150px;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
+  margin-left: 18.75rem;
 }
 
-.conversation-elements .tooltip-button:hover .tooltip-text {
+.conversation-elements .microphone-bar .tooltip-button:hover .tooltip-text {
   opacity: 1;
 }
 
