--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,6 +11,22 @@ body {
   background: #4b4b4b;
 }
 
+::-webkit-scrollbar {
+  width: convertToRem(20rem);
+}
+
+::-webkit-scrollbar-thumb {
+  background: #ffffff11;
+  transition: all 0.4s ease;
+  border-radius: 50px;
+  border: 0.5px solid #ffffff8a;
+
+  &:hover {
+    background: #ffffff8a;
+    border: none;
+  }
+}
+
 .hidden {
   display: none;
 }
@@ -295,7 +311,7 @@ body {
 
 .conversation-elements {
   width: convertToRem(500rem);
-  min-height: 100vh;
+  min-height: 100%;
   height: 100%;
   display: block;
   justify-content: center;
@@ -351,79 +367,86 @@ body {
     }
   }
 
-  .tooltip-button {
-    display: flex;
+  .microphone-bar {
+    height: convertToRem(50rem);
+    width: 100%;
+    justify-content: center;
+    align-items: flex-end;
+    margin-top: convertToRem(10rem);
 
-    .talk {
-      max-width: convertToRem(100rem);
-      min-width: convertToRem(80rem);
-      height: convertToRem(50rem);
-      border: none;
-      border-radius: convertToRem(20rem);
-      background: #c56cf0;
+    .tooltip-button {
       display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: "Baloo", sans-serif;
-      font-weight: bolder;
-      text-transform: uppercase;
-      color: #fff;
-      transition: all 0.5s;
-      cursor: pointer;
-      margin: auto;
-      margin-right: convertToRem(170rem);
-      margin-left: convertToRem(150rem);
-
-      .fas.fa-microphone-alt {
-        display: flex;
+      .talk {
+        max-width: convertToRem(100rem);
+        min-width: convertToRem(80rem);
+        height: convertToRem(50rem);
+        border: none;
+        border-radius: convertToRem(20rem);
+        background: #c56cf0;
+        display: block;
         justify-content: center;
         align-items: center;
+        font-family: "Baloo", sans-serif;
+        font-weight: bolder;
+        text-transform: uppercase;
+        color: #fff;
+        transition: all 0.5s;
+        cursor: pointer;
+        margin: auto;
+        position: fixed;
+        right: 0;
+        left: 0;
+        bottom: 0;
+
+        .fas.fa-microphone-alt {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+
+        &:hover {
+          box-shadow: 0px 0px 10px 0px #252525b7;
+        }
+
+        &:active {
+          background: #540b79;
+        }
+      }
+      .talk.talking {
+        animation: "pulse" 0.7s infinite;
+
+        @keyframes pulse {
+          from {
+            opacity: 1;
+          }
+          to {
+            opacity: 0.3;
+          }
+        }
+      }
+
+      .tooltip-text {
+        opacity: 0;
+        width: convertToRem(120rem);
+        height: convertToRem(50rem);
+        background: #000000b0;
+        color: #fff;
+        text-align: center;
+        border-radius: convertToRem(6rem);
+        padding: convertToRem(5rem) 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 2;
+        font-family: "Baloo", sans-serif;
+        transition: all 0.5s;
+        margin-left: convertToRem(300rem);
       }
 
       &:hover {
-        box-shadow: 0px 0px 10px 0px #252525b7;
-      }
-
-      &:active {
-        background: #540b79;
-      }
-    }
-    .talk.talking {
-      animation: "pulse" 0.7s infinite;
-
-      @keyframes pulse {
-        from {
+        .tooltip-text {
           opacity: 1;
         }
-        to {
-          opacity: 0.3;
-        }
-      }
-    }
-
-    .tooltip-text {
-      opacity: 0;
-
-      width: convertToRem(120rem);
-      height: convertToRem(50rem);
-      background: #000000b0;
-      color: #fff;
-      text-align: center;
-      border-radius: convertToRem(6rem);
-      padding: convertToRem(5rem) 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 2;
-      font-family: "Baloo", sans-serif;
-      left: -100%;
-      margin-left: -150px;
-      transition: all 0.5s;
-    }
-
-    &:hover {
-      .tooltip-text {
-        opacity: 1;
       }
     }
   }
