fix(files_path): files path updated after change index.html directory

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -97,13 +97,13 @@
       </div>
     </section>
 
-    <script src="./controllers/weatherController.js"></script>
-    <script src="./controllers/locationController.js"></script>
-    <script src="./controllers/html-templates/animateHTML.js"></script>
-    <script src="./controllers/sentencesControllers/judgeTheMessageByTheSentence.js"></script>
+    <script src="../controllers/weatherController.js"></script>
+    <script src="../controllers/locationController.js"></script>
+    <script src="../controllers/html-templates/animateHTML.js"></script>
+    <script src="../controllers/sentencesControllers/judgeTheMessageByTheSentence.js"></script>
 
-    <script src="./services/deleteConversation.js"></script>
+    <script src="../services/deleteConversation.js"></script>
 
-    <script src="./index.js"></script>
+    <script src="../index.js"></script>
   </body>
 </html>
