--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -48,10 +48,10 @@
         <div></div>
         <div></div>
       </div>
-      <h1 id="page title">Command voice</h1>
+      <h1 id="page title" translate="no">Robot Speaker</h1>
     </nav>
     <div class="menu-opened hidden">
-      <h3>Robot Speaker</h3>
+      <h3 translate="no">Robot Speaker</h3>
       <hr />
       <div class="clean-storage">
         <i class="fas fa-trash-alt"></i>
